Updated my bio information

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 	<section id="Jordan">
 		<p>Hey, my name is Jordan</p>
 	</section>
+
+	<section id="Spencer">
+		<p> Hello, my name is Spencer, I enjoy film making and photography!><p>
+	</section>
 </body>
 </html>
