added a picture and more to my bio

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 	<section id="Spencer">
 		<p> Hello, my name is Spencer, I enjoy film making and photography!><p>
+
+			<p> I've grown up in London all my life and I'm attending Fanshwe in hopes to pursue my passion for prahic deisgn and filmmaking!</p>
+
+			<p>I look foward to learning how to code as I've never once dabbled into this specific niche regarding the Interactive Media Design program!</p>
+			<img src="images/IMG_0829.jpg">
+
 	</section>
 </body>
 </html>
