added my bio and an image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
 </head>
 <body>
 	<section id="Jordan">
-		<p>Hey, my name is Jordan</p>
+		<h3>Hey, my name is Jordan</h3>
+
+		<p>I am from London, Ontario. I enjoy traveling, especially to the UK, reading and writing poetry, and I love photography.</p>
+
+		<p>Throughout my Fanshawe experience, I am hoping to expand my minimal skills in Adobe, and learn how to code quickly and efficiently.</p>
+
+		<img src="images/IMG_6462.JPG"> 
+
+
 	</section>
 
 	<section id="Spencer">
-		<p> Hello, my name is Spencer, I enjoy film making and photography!><p>
+		<h3> Hello, my name is Spencer, I enjoy film making and photography!><h3>
 
 			<p> I've grown up in London all my life and I'm attending Fanshwe in hopes to pursue my passion for prahic deisgn and filmmaking!</p>
 
